# cpuident

./: CMakeLists.txt  README.md
src/: cpuident.c  cpuident.h  cpuident.inc
